fix filter on small screen

--- a/sass/_filter.sass
+++ b/sass/_filter.sass
@@ -40,10 +40,12 @@
         left: -180px
         @include size(180px, 100%)
         background-color: $color_grey_bg
+        overflow: auto;
         .tabs
+          min-height: 450px
           ul
             align-items: normal
-            border-bottom: 1px solid $color_border_tab
+            border-bottom: none
             flex-direction: column
             text-align: left
             li
@@ -76,11 +78,13 @@
         padding-left: 30px
         @include size(100%, 100%)
         display: none
+        overflow: auto
         &.active
           display: block
         .sort-list
           background-color: $white
           width: 100%
+          min-height: 450px
           p
             padding: 20px
             strong
@@ -129,12 +133,13 @@
                   height: auto
                   border: none
                   padding-left: 0
+                  font-size: 13px
                 &:before
                   content: ""
                   @include size(24px, 24px)
                   background-image: url($icon-arrow-down)
                   position: absolute
-                  top: 4px
+                  top: 0
                   right: 0
                 &:after
                   display: none
@@ -146,3 +151,27 @@
         .section
           .title
             padding-top: 20px
+
+@media handheld, only screen and (max-width: $screen-xs-min)
+  .modal-filter
+    .modal-card
+      .modal-card-body
+        margin-left: 139px
+        .fiter-side
+          left: -139px
+          width: 139px
+          .tabs
+            ul
+              li
+                a
+                  font-size: 11px
+                &.is-active
+                  &:after
+                    right: 8px
+        .filter-option
+          padding-left: 20px
+          .sort-list
+            .checkbox
+              padding: 20px 10px
+              .label, .sort-text
+                font-size: 11px
