--- a/sass/modules/_variable.sass
+++ b/sass/modules/_variable.sass
@@ -88,3 +88,5 @@ $shadow_discuss:  0 0.5px 0 0 $color_shadow_discuss
 $color_bg_overlay: rgba(38, 39, 41, 0.9)
 $shadow_comment: 0 2px 4px 0 $color_shadow_comment
 $shadow_sticky: 0 12px 12px 0 $color_shadow_sticky1, 0 0 12px 0 $color_shadow_sticky2
+
+$screen-xs-min: 480px
